feat: replaced exceptions in services